[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/audio_off_normal.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/audio_off_hover.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MusicButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/MusicButtonGroup.gd" type="Script" id=4]

[node name="MusicButtonGroup" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" parent="." instance=ExtResource( 3 )]
anchor_right = 1.0
margin_left = -15.0
margin_right = -15.0

[node name="MusicOffButton" type="TextureButton" parent="."]
visible = false
anchor_right = 1.0
margin_left = -15.0
margin_top = 18.0
margin_right = -15.0
margin_bottom = 40.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="MusicOffButton" to="." method="_on_MusicOffButton_pressed"]
